--- a/src/layout/Footer/Footer.module.scss
+++ b/src/layout/Footer/Footer.module.scss
@@ -71,11 +71,11 @@ footer{
 }
 
 .dark{
-    color: white;
+    color: black;
     background-color: rgb(169, 163, 163);
 }
 
 .light{
-    background-image: url(../../assets/img/bg_light_footer.png);
+    background-image: url(../../assets/img/bg_light_footer.webp);
     color: black;
 }
