--- a/src/layout/Header/Header.module.scss
+++ b/src/layout/Header/Header.module.scss
@@ -130,7 +130,7 @@ header{
 }
 
 .light{
-    background-image: url(../../assets/img/bg_light_header.png);
+    background-image: url(../../assets/img/bg_light_header.webp);
     color: black;
     #autotext{
         color: rgb(8, 92, 8);
@@ -143,7 +143,7 @@ header{
 }
 
 .dark{
-    background-image: url(../../assets/img/bg_dark_header.png);
+    background-image: url(../../assets/img/bg_dark_header.webp);
     color: white;
     
     #autotext{
