Fix: Bug nbproject transfert de box info dans projets

--- a/src/pages/Projets/Projets.module.scss
+++ b/src/pages/Projets/Projets.module.scss
@@ -28,9 +28,105 @@
         }
     }
 
+    .boxinfos{
+        margin-top: 50px;
+        width: 100%;
+        color: variables.$secondary-color;
+        padding: 0px;
+    
+        #container{
+            color: variables.$secondary-color;;
+        }
+           
+        .container{
+    
+            &__title{
+                padding: 10px;
+                margin-bottom: 10px;
+            }
+    
+            &__description{
+                padding: 10px;   
+                
+                @media screen and (max-width: variables.$breakpoint-tablette) {
+                    
+                }
+            
+                @media screen and (max-width: variables.$breakpoint-mobile) {
+                    font-size: 14px;
+                }
+            }
+    
+            &__technologies{
+                display: flex;
+                padding: 10px;
+    
+                .technologies{
+                    display: flex;
+                    align-items: center;
+                    border-radius: 5px;
+                    flex-basis: 100%;
+     
+                
+                    &__name{
+                        padding: 10px;
+                    }
+            
+                    &__icones{
+                        & img{
+                            width: 50px;
+                            height: 50px;
+    
+                            @media screen and (max-width: variables.$breakpoint-mobile) {
+                                width: 30px;
+                                height: 30px;
+                            }
+                        }   
+                    }
+                }
+            }
+    
+            &__sources{
+                display: flex;
+                justify-content: space-around;
+                padding: 5px;
+    
+                button{
+                    border : 1px solid variables.$secondary-color;
+                    border-radius: 10px;
+                    padding: 5px;    
+                }
+            }   
+        }
+    }
+
     &--dark{
         .background__title{
             background: url('../../assets/img/bg_dark_title.webp');
+        }
+
+        .container{
+
+            &__technologies{
+     
+                color: white;
+            }
+
+            &__description{
+                color: white;          
+            }
+
+        
+            &__sources{
+    
+                button{
+                    background-color: variables.$secondary-color;
+
+                    & a{
+                        color: white;
+                    }
+                }
+            }
         }
 
     }
@@ -40,6 +136,31 @@
             background: url('../../assets/img/bg_light_header.webp');
             background-size: cover;
         }
+
+        .container{
+            &__sources{
+    
+                button{
+               
+                    & a{
+                        color: variables.$secondary-color;
+                    }
+                }
+            }
+        }
     }
 }
 
+
+.animOpacity{
+    animation: opacitytitle 1.5s ease-in-out;
+}
+
+@keyframes opacitytitle{
+    0%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
+    }
+}
