--- a/src/components/Switch/Switch.module.scss
+++ b/src/components/Switch/Switch.module.scss
@@ -6,6 +6,7 @@
     width: 56px;
     height: 29px;
 
+
     @media screen and (max-width: variables.$breakpoint-tablette) {
         width: 53px;
         height: 27px;
@@ -17,7 +18,7 @@
     }
 }
 
-input{
+.input{
     opacity: 0;
     width: 0;
     height: 0;
