--- a/src/layout/Header/Header.module.scss
+++ b/src/layout/Header/Header.module.scss
@@ -1,29 +1,37 @@
 @use "../../sass/utils/variables";
 @use "../../sass/utils/mixins";
 
-header{
+.header{
     @include mixins.largeScreen;
     display: flex;
     align-items: center;
     justify-content: space-between;
     border-radius: 30px;
-    height: 100px;
+    height: 10vh;
+   
 
     @media screen and (max-width: variables.$breakpoint-tablette) {
         @include mixins.mediumScreen;
     }
 
     @media screen and (max-width: variables.$breakpoint-mobile) {
-        justify-content: left;
-        padding: 0px 5px !important;
+        
         @include mixins.smallScreen;
+        padding: 0px 5px;
+        display: flex;
+        align-items: center;
         height: 60px;
         border-radius: 10px;
+        justify-content: end;
     }
     
     .logo{  
         z-index: 3;
         animation: jug 1.5s ease-in-out forwards;
+
+        @media screen and (max-width: variables.$breakpoint-mobile) {
+            display: none;
+        }
 
         &--start{
             animation: jug 1.5s ease-in-out forwards;
@@ -48,14 +56,17 @@ header{
         }    
     }
 
+    #list{
+        font-size: 20px;
+    }
+
     .list{
         display: flex;
         flex: 1.3;
-    
         justify-content: right;
         font-size: 20px;
-        background-color: transparent;
         z-index: 2;
+       
         
         @media screen and (max-width: variables.$breakpoint-tablette) {
             justify-content: left;
@@ -64,8 +75,19 @@ header{
         }
 
         @media screen and (max-width: variables.$breakpoint-mobile) {
-            margin-left: 7px;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            position: absolute;
+            top:0%;
+            left: -100%;
+            z-index: 99999;
+            height: 100vh;
+            width: 100vw;
+            transition: left 0.8s;       
         }
+
+    
         
         &__item{
             background-color: transparent;
@@ -80,7 +102,8 @@ header{
             }
 
             @media screen and (max-width: variables.$breakpoint-mobile) {
-                font-size: 16px
+                font-size: 25px;
+                padding: 10px;
             }
             
             a:hover{
@@ -88,7 +111,39 @@ header{
                 border-bottom: 2px solid violet;
             }
         }
+    } 
+    
+    .mobile{
+        display: none;
+        @media screen and (max-width: variables.$breakpoint-tablette) {
+            display: none;
+        }
+
+        @media screen and (max-width: variables.$breakpoint-mobile) {
+            display: flex;
+            left:1%;
+        }
     }
+    
+    // .background__list__mobile{
+    //     display: none;
+
+    //     @media screen and (max-width: variables.$breakpoint-tablette) {
+    //         display: none;
+    //     }
+
+    //     @media screen and (max-width: variables.$breakpoint-mobile) {
+    //         display: block;
+    //         background-color: red; 
+    //         height: 100vh;
+    //         width: 100vw;
+    //         position: fixed;
+    //         top: 0;
+    //         left: 0;
+    //     }
+    // }    
+
+
 
     #autotext{
         display: flex;
@@ -127,34 +182,73 @@ header{
         }
 
     }
-}
 
-.light{
-    background-image: url(../../assets/img/bg_light_header.webp);
-    color: black;
-    #autotext{
-        color: rgb(8, 92, 8);
-        font-weight: 600;
-
-        @media screen and (max-width: variables.$breakpoint-tablette) {
-            color: rgb(184, 236, 186);
-        }
+    #burger{
+        color: white;
     }
-}
 
-.dark{
-    background-image: url(../../assets/img/bg_dark_header.webp);
-    color: white;
+    .burger{
+        display: none;
+
+        @media screen and (max-width: variables.$breakpoint-mobile) {
+            display: block;
+            position: absolute;
+            padding-right: 10px;
+            z-index: 9999999999999;
+            top:25px;
+            left:10px;
+        }    
+    }
+
+    &--light{
+        background-image: url(../../assets/img/bg_light_header.webp);
+        color: black;
+
+        .list{
+            @media screen and (max-width: variables.$breakpoint-mobile) {
+                background-color: rgb(255, 255, 255);
+            }
+        } 
+
+        #autotext{
+            color: rgb(8, 92, 8);
+            font-weight: 600;
     
-    #autotext{
-        color: rgb(126, 79, 126);
-        font-weight: 500; 
+            @media screen and (max-width: variables.$breakpoint-tablette) {
+                color: rgb(184, 236, 186);
+            }
+        }
+    
+        #burger{
+            color: black;
+        }
+    }
+    
+    &--dark{
+        background-image: url(../../assets/img/bg_dark_header.webp);
+        color: white;
 
-        @media screen and (max-width: variables.$breakpoint-tablette) {
-            color: rgb(233, 129, 233);
+        .list{
+            @media screen and (max-width: variables.$breakpoint-mobile) {
+                background-color: rgb(0, 0, 0);
+            }
+        }    
+        
+        #autotext{
+            color: rgb(126, 79, 126);
+            font-weight: 500; 
+    
+            @media screen and (max-width: variables.$breakpoint-tablette) {
+                color: rgb(233, 129, 233);
+            }
         }
     }
 }
+
+
+
+
+
 
 @keyframes change-text {
     from   { content: 'D'; }
