--- a/src/layout/Header/Header.module.scss
+++ b/src/layout/Header/Header.module.scss
@@ -78,7 +78,7 @@
             left: 0%;
             z-index: 3;
             height: 100dvh;
-            width: 150vw;
+            width: 100%;
             transition: top 0.8s ease-in-out;  
             margin-left: 0;     
         }
