--- a/src/layout/Header/Header.module.scss
+++ b/src/layout/Header/Header.module.scss
@@ -55,104 +55,7 @@
             }
         }    
     }
-
-    .list{
-        display: flex;
-        flex: 1.3;
-        justify-content: right;
-        font-size: 20px;
-        z-index: 2;
-       
-        @media screen and (max-width: variables.$breakpoint-tablette) {
-            justify-content: left;
-            margin-left: 7px;
-            flex: 0.9;
-        }
-
-        @media screen and (max-width: variables.$breakpoint-mobile) {
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            position: fixed;
-            top:-100%;
-            left: 0%;
-            z-index: 3;
-            height: 100dvh;
-            width: 100%;
-            transition: top 0.8s ease-in-out;  
-            margin-left: 0;     
-        }
-
-        &__item{
-            background-color: transparent;
-            margin-left: 5px;
-
-            @media screen and (max-width: variables.$breakpoint-tablette) {
-                font-size: 18px
-            }
-
-            @media screen and (max-width: variables.$breakpoint-mobile) {
-                font-size: 25px;
-                padding: 5px;
-                margin-bottom: 20px;
-            }
-
-            & a{
-                margin-left: 5px;
-
-                @media screen and (max-width: variables.$breakpoint-mobile) {
-                    margin-left: 0px;
-                }
-            }
-        
-            a:hover{
-                padding-bottom: 4px;
-                border-bottom: 2px solid variables.$secondary-color;
-            }
-        }
-    } 
-    
-    .mobile{
-        @media screen and (max-width: variables.$breakpoint-mobile) {
-            display: flex;
-            top:0%;
-        }
-    }
-    
-    .background__list__mobile{
-        display: none;
-
-        @media screen and (max-width: variables.$breakpoint-tablette) {
-            display: none;
-        }
-
-        @media screen and (max-width: variables.$breakpoint-mobile) {
-            display: none;
-            height: 100vh;
-            width: 100vw;
-            position: fixed;
-            top: 0;
-            z-index: 2;  
-        }
-
-        &__left{
-            width: 50%;
-            height: 100%; 
-            left: -50%; 
-            position: fixed;
-            transition: left 0.4s;
-        }
-
-        
-        &__right{
-            width: 50%;
-            height: 100%;
-            left: 100%;  
-            position: fixed;
-            transition: left 0.4s;
-        }
-    }    
-
+   
     #autotext{
         display: flex;
         flex: 0.7;
@@ -178,6 +81,23 @@
             animation: change-text 10s forwards;
         }
 
+        &--light{
+            color: rgb(8, 92, 8);
+            font-weight: 600;
+    
+            @media screen and (max-width: variables.$breakpoint-tablette) {
+                color: rgb(184, 236, 186);
+            }
+        }
+    
+        &--dark{    
+            color: rgb(126, 79, 126);
+            font-weight: 500; 
+    
+            @media screen and (max-width: variables.$breakpoint-tablette) {
+                color: rgb(233, 129, 233);
+            } 
+        }
     }
 
     .switch{
@@ -206,62 +126,10 @@
 
     &--light{
         background-image: url(../../assets/img/bg_light_header.webp);
-        color: variables.$light-contrast-color;
+        color: variables.$light-contrast-color;    
 
-        .list{
-            @media screen and (max-width: variables.$breakpoint-mobile) {
-                background: url("../../assets/img/navbar_bg_light.webp");
-                background-repeat: no-repeat;
-                background-size: cover;
-            }
-
-            &__item{
-                @media screen and (max-width: variables.$breakpoint-mobile) {
-                    background-color: variables.$dark-contrast-color;
-                    border-radius: 15px;
-                    border: 2px solid variables.$primary-color;
-                    padding: 10px;
-                    transition: 1s;
-                }
-
-                &:active{
-                    @media screen and (max-width: variables.$breakpoint-mobile) {
-                        border-bottom: none;
-                        background-color: rgb(155, 216, 243);
-                        border: 2px solid variables.$primary-color;
-                    }
-                }
-
-                & a{
-                    @media screen and (max-width: variables.$breakpoint-mobile) {
-                        color: variables.$primary-color;
-                    }
-                    &:hover{
-                        @media screen and (max-width: variables.$breakpoint-mobile) {
-                            border-bottom: none;
-                        }
-                    }
-                }
-            }
-        }
-
-        #autotext{
-            color: rgb(8, 92, 8);
-            font-weight: 600;
-    
-            @media screen and (max-width: variables.$breakpoint-tablette) {
-                color: rgb(184, 236, 186);
-            }
-        }
-    
-        .background__list__mobile{    
-            &__left{
-                background-color: variables.$dark-contrast-color;
-            }
-
-            &__right{
-                background-color: variables.$dark-contrast-color;
-            }
+        .mobile{
+            color: red;
         }
     }
     
@@ -269,64 +137,11 @@
         background-image: url(../../assets/img/bg_dark_header.webp);
         color: variables.$dark-contrast-color;   
 
-        .list{
-            @media screen and (max-width: variables.$breakpoint-mobile) {
-                background: url("../../assets/img/navbar_bg_dark.webp");
-                background-repeat: no-repeat;
-                background-size: cover;
-            }
-
-            &__item{
-                @media screen and (max-width: variables.$breakpoint-mobile) {
-                    background-color: variables.$primary-color;
-                    border-radius: 15px;
-                    border: 2px solid variables.$dark-contrast-color;
-                    padding: 10px;
-                    transition: 1s;
-                }
-
-                &:active{
-                    @media screen and (max-width: variables.$breakpoint-mobile) {
-                        border-bottom: none;
-                        border: 2px solid rgb(61, 120, 145);
-                    }
-                }
-
-                & a{
-                    &:hover{
-                        @media screen and (max-width: variables.$breakpoint-mobile) {
-                            border-bottom: none;
-                        }
-                    }
-                }
-            }
-        }
-        
-        #autotext{
-            color: rgb(126, 79, 126);
-            font-weight: 500; 
-    
-            @media screen and (max-width: variables.$breakpoint-tablette) {
-                color: rgb(233, 129, 233);
-            }
-        }
-
-        .background__list__mobile{  
-            &__left{
-                background-color: variables.$light-contrast-color;
-            }
-
-            
-            &__right{
-                background-color: variables.$light-contrast-color;
-            }
+        .mobile{
+            color: red;
         }
     }
 }
-
-
-
-
 
 
 @keyframes change-text {
