Maj; darkmode classe : 1 element Appeler plusieurs fois la fonction pour plusieurs élements.

--- a/src/components/NavBar/Navbar.module.scss
+++ b/src/components/NavBar/Navbar.module.scss
@@ -88,7 +88,7 @@
                     }
                 }
             }
-        }
+        }        
     }
 
     &--light{
@@ -139,3 +139,14 @@
         top:0%;
     }
 }
+
+.testsup{
+  
+    &--dark{
+
+        @media screen and (max-width: variables.$breakpoint-mobile) {
+            color: red;
+        }
+    }
+}
+
